--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
+theme: minima
+
 # social links
 github_username:  wackyblackie # DO NOT include the @ character, or else the build will fail!
 
