--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: my awesome site
 author: wackyblackie
-email: your-email@domain.com
+email: wackyblackie-page-feedback@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
